# redns

./: .gitignore  Cargo.toml  LICENSE  Makefile
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: built_in.rs  chain_builder.rs  config.rs  context.rs  doh_server.rs  lib.rs  plugin.rs  redns.rs  registry.rs  sequence.rs  server.rs  system_dns.rs  tcp_server.rs  udp_server.rs  udp_server_uring.rs  upstream.rs
crates/plugins/executables/: Cargo.toml
crates/plugins/executables/src/: arbitrary.rs  black_hole.rs  cache.rs  debug_print.rs  drop_resp.rs  dual_selector.rs  ecs_handler.rs  fallback.rs  forward.rs  hosts.rs  lib.rs  metrics.rs  query_summary.rs  redirect.rs  reverse_lookup.rs  shuffle.rs  sleep.rs  ttl.rs
crates/plugins/matchers/: Cargo.toml
crates/plugins/matchers/src/: client_ip.rs  cname.rs  domain_set.rs  env.rs  has_resp.rs  has_wanted_ans.rs  ip_set.rs  lib.rs  ptr_ip.rs  qclass.rs  qname.rs  qtype.rs  random.rs  rate_limiter.rs  rcode.rs  resp_ip.rs  string_exp.rs
dashboard/: Makefile  README.md  build.mjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
dashboard/src/: App.svelte  app.css  app.js  input.css  main.ts
dashboard/src/lib/components/: CacheView.svelte  ClientsView.svelte  ErrorAlert.svelte  LogsView.svelte  TopNav.svelte  UpstreamsView.svelte
dashboard/src/lib/types/: dashboard.ts
dashboard/src/lib/utils/: dashboard.ts  theme.svelte.ts
