[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/plugins/matchers",
    "crates/plugins/executables",
    "crates/bin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[profile.release]
codegen-units = 1
lto = "fat"
target-cpu = "x86-64-v3"
