[package]
name = "redns-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hickory-proto = { version = "0.25", default-features = false, features = ["std"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = { version = "0.0", default-features = false }
tokio = { version = "1", features = ["net", "time", "rt", "rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
base64 = "0.22"
tokio-util = "0.7"
quinn = "0.11.9"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.4.0"
bytes = "1.11.1"
parking_lot = "0.12"
nix = { version = "0.31", features = ["net"] }

# io_uring support for UDP server (Linux-only)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }
libc = "0.2"

[features]
default = []
io-uring = ["dep:io-uring"]
