[package]
name = "redns-matchers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
redns-core = { path = "../../core" }
hickory-proto = "0.25"
dashmap = "6"
ipnet = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde-saphyr = { version = "0.0", default-features = false }
tracing = "0.1"
